# 3-python-package-package_proj

./: Pipfile  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: build.yaml
src/quotes/: __init__.py  chatgpt.py  fallback.py  generator.py
tests/: conftest.py  test_celebrityquote.py  test_chatgpt.py  test_generatequote.py  test_languagequote.py  test_moodquote.py
