[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "A simple Python project"
authors = [
    {name = "Alice Doe", email = "alice@example.com"},
    {name = "Bob Smith", email = "bob@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

[project.dependencies]
requests = "^2.31.0"
numpy = "^1.26.0"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
